# pyqula

./: .gitattributes  .gitignore  CLAUDE.md  MANIFEST.in  README.md  README.md.bak  argparse  clean.py  install.sh  pipupdate.sh  pyproject.toml  run_tests.sh  setup.py  txt  update.py
documentation/: convert.sh  user_guide.md
examples/: addpath.py  clean.py  runall.py
examples/1d/: runall.py
examples/embedding/: main.py
jupyter-notebooks/.ipynb_checkpoints/: honeycomb_lattice-checkpoint.ipynb
jupyter-notebooks/Hubbard_honeycomb/: main.ipynb
jupyter-notebooks/buckled_antiferomagnetic_honeycomb_lattice/: main.ipynb
jupyter-notebooks/honeycomb_lattice/: honeycomb_lattice.ipynb
jupyter-notebooks/hubbard_model_zigzag_ribbon/: main.ipynb
jupyter-notebooks/jackiw_ribbi_model/: main.ipynb
jupyter-notebooks/quantum_dot_modes/: main.ipynb
src/: pyqula_28.4.2024.tar
src/pyqula/: .dos.py.swp  .green.py.swp  .hamiltonians.py.swo  .kanemele.py.swp  .parallelslurm.py.swp  .reciprocalmap.py.swp  .spectrum.py.swo  .topology.py.swo  __init__.py  algebra.py  alloy.py  angular.py  bandstructure.py  check.py  checkclass.py  chi.py  classicalspin.py  clean.py  code.tar  compilefortran.py  convolution.py  correlator.py  crystalfield.py  current.py  data.py  density.py  densitymatrix.py  diagonalize.py  disorder.py  disorder_heterostructure.py  dos.py  dyson.py  effective.py  embedding.py  estimators.py  extract.py  fermisurface.py  filling.py  films.py  gap.py  (+99 more)
tests/: testutils.py
tests/algebra/: test_densebmat_and_dtype_fixes.py  test_heavy_fermion_fusion.py
tests/bandstructure/: test_aah_model_hofstadter_pumping.py  test_aahf_localization_length.py  test_af_sc_junction.py  test_get_bands_nd.py  test_kekule_honeycomb_bilayer_bands.py
tests/chi/: test_acceleration.py  test_eigenvalues_kmesh.py  test_spinchi_rotation.py
tests/correlator/: test_harper_and_static_correlators.py
tests/densitymatrix/: test_acceleration.py  test_evolution_correlation.py  test_full_dm_accumulate_parallel.py
tests/dos/: test_tas2_soc_dos.py
tests/fermisurface/: test_fermi_surface.py  test_fermi_surface_examples.py  test_fermi_surface_generator.py  test_pairing_fermi_surface.py  test_qpi_examples.py
tests/geometry/: test_bloch_phase_scalar_k.py  (+2 more)
tests/kdos/: test_kdos_bands.py  (+6 more)
tutorials/: intro.md  intro.md.backup
(+2593 files in other folders)
