[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
markers = [
    "slow: exercises a larger/slower configuration than the default suite targets",
]
